<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shep_setings"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <Button
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn"
        android:padding="10dp"
        android:text="@string/show"
        android:textColor="@color/white"
        android:textSize="22sp"

        />

    <Button
        android:id="@+id/show_last"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:padding="10dp"
        android:text="@string/show_last"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:padding="10dp"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="22sp"

        />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:padding="10dp"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="22sp" />


</LinearLayout>