<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:background="@drawable/shep5"
    android:orientation="horizontal">

    <TextView

        android:id="@+id/text_dialogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center|start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/dialogue_delete"
        android:textColor="#fffe00"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_twotone_delete_forever_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shep5"
        android:backgroundTint="@color/purple_200"
        android:gravity="center"
        android:text="@string/no_delete"
        android:textColor="#fffe00"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dialogue" />

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shep5"
        android:backgroundTint="@color/background"
        android:text="@string/yes_delete"
        android:textColor="#fffe00"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@id/text_dialogue" />


</androidx.constraintlayout.widget.ConstraintLayout>