<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imege"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="register_Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shep"
            android:elevation="15dp"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/full"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="10dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="1dp"
                    app:boxCornerRadiusTopEnd="1dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:boxStrokeWidth="3dp"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="10dp"

                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_person_24"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                app:boxCollapsedPaddingTop="10dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="1dp"
                app:boxCornerRadiusTopEnd="1dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="3dp"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                app:boxCollapsedPaddingTop="10dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="1dp"
                app:boxCornerRadiusTopEnd="1dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeWidth="3dp"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:fontFamily="sans-serif-black"

                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="10dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="1dp"
                    app:boxCornerRadiusTopEnd="1dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeWidth="3dp"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_re"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:hint="@string/r_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="1dp"
                    app:boxCornerRadiusBottomEnd="1dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="1dp"
                    app:boxStrokeWidth="3dp"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/password"
                        android:fontFamily="sans-serif-black"
                        android:drawablePadding="8dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/date_baker_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shep2"
                android:fontFamily="sans-serif-black"
                android:text="@string/Birthdate"
                android:paddingStart="10dp"
                android:gravity="start|center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shep2"
                android:entries="@array/contre"
                android:padding="10dp"

                android:textColor="@color/mtrl_textinput_default_box_stroke_color" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_gender"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_gender2"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="sans-serif-black"

                    android:text="@string/Female"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20sp" />

            </RadioGroup>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/shep_botten"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>