<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imege"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".Login_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/yellow"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_user_name_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="10dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="1dp"
                    app:boxCornerRadiusTopEnd="1dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:boxStrokeWidth="3dp"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundMode="outline"
                    app:boxCollapsedPaddingTop="10dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="1dp"
                    app:boxCornerRadiusTopEnd="1dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:boxStrokeWidth="3dp"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/remember"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/shep_botten"
                        android:backgroundTint="#F6308D"
                        android:fontFamily="@font/calibri"
                        android:text="Sign up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/shep_botten"
                        android:backgroundTint="#F6308D"
                        android:fontFamily="@font/calibri"
                        android:text="Sign in"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>